--- a/G-weather-app/src/styles.css
+++ b/G-weather-app/src/styles.css
@@ -12,5 +12,22 @@ h1 {
  align-content: center;
 }
 .card-text {
-  color: black;
+  color: rgb(235, 46, 46);
+  text-align: center;
 }
+.card-title {
+  color: rgb(248, 246, 246);
+  text-align: center;
+}
+.col-4 {
+  text-align: center;
+}
+.col-4 {
+  background-color: rgb( 22, 37, 255);
+}
+.col-4 {
+margin-left: auto;
+margin-right: auto;
+}
+
+
