--- a/G-weather-app/src/app/app.component.html
+++ b/G-weather-app/src/app/app.component.html
@@ -99,14 +99,15 @@
           <div class="row">
             <div class="col-4">
               <div class="card-1" style="width: 15rem">
-                <img class="card-img-top" src="..." alt="Card image cap" />
+                <img
+                  class="card-img-top"
+                  src="https://th.bing.com/th/id/OIP._XUMCe87KJOODTSEqhCbowAAAA?w=174&h=180&c=7&r=0&o=5&pid=1.7"
+                  alt="Card image cap"
+                />
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title"></h5>
+
+                  <a href="#" class="btn btn-primary">Login</a>
                 </div>
               </div>
             </div>
@@ -114,25 +115,23 @@
               <div class="card-2" style="width: 15rem">
                 <img class="card-img-top" src="..." alt="Card image cap" />
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+
+
+                  <a href="#" class="btn btn-primary">Enter</a>
                 </div>
               </div>
             </div>
             <div class="col-4">
               <div class="card-3" style="width: 15rem">
-                <img class="card-img-top" src="..." alt="Card image cap" />
+                <img
+                  class="card-img-top"
+                  src="https://th.bing.com/th/id/OIP.H7_PhmSyCRWb4_1i5PFbdgHaHZ?w=174&h=180&c=7&r=0&o=5&pid=1.7"
+                  alt="Card image cap"
+                />
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title"></h5>
+
+                  <a href="#" class="btn btn-primary">Maps</a>
                 </div>
               </div>
             </div>
