--- a/G-weather-app/src/app/app.component.html
+++ b/G-weather-app/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="container app-bg">
   <div class="row">
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
@@ -50,13 +49,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a
-                class="drop"
-                href="#"
-                tabindex="-1"
-                aria-disabled="false"
-                ></a
-              >
+              <a class="drop" href="#" tabindex="-1" aria-disabled="false"></a>
             </li>
           </ul>
           <form class="d-flex">
@@ -95,13 +88,11 @@
         <title>Hello, world!</title>
       </head>
       <body>
-
         <h1>Weather App</h1>
         <div class="container">
           <div class="row">
             <div class="col-4">
               <div class="card-1" style="width: 15rem">
-
                 <img
                   class="card-img-top"
                   src="https://th.bing.com/th/id/OIP._XUMCe87KJOODTSEqhCbowAAAA?w=174&h=180&c=7&r=0&o=5&pid=1.7"
@@ -162,4 +153,3 @@
     </div>
   </nav>
 </div>
-
