--- a/G-weather-app/src/app/dashboard/dashboard.component.html
+++ b/G-weather-app/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-</head>
-<body>
-<p>Server </p>
+  <p>Server</p>
 
-</body>
+  <nav class="navbar fixed-bottom navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Created by Gael Rueda</a>
+    </div>
+  </nav>
 </html>
-
-
+<app-weather-list></app-weather-list>
