--- a/G-weather-app/src/styles.css
+++ b/G-weather-app/src/styles.css
@@ -7,7 +7,7 @@ p {
 }
 h1 {
   text-align: center;
-  
+
 }
 .card-image-top {
  align-content: center;
@@ -32,5 +32,8 @@ margin-right: auto;
 }
 .container-fluid {
 text-align: center;
+}
+.weather-list{
+  text-decoration-color: aliceblue;
 }
 
